<resources>
    <string name="app_name">Azshop</string>
    <string name="shoppy">Shoppy</string>
    <string name="online_shopping">Online Shopping</string>
    <string name="welcome">Welcome</string>
    <string name="change_the_quality_of_your_appearance_with_the_best_online_store_shoppy">Change the Quality of Your Appearance with the best online store “Shoppy”</string>
    <string name="log_in">Log In</string>
    <string name="sign_up">Sign up</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="please_fill_the_forms_below_to_get_started">Please fill the forms below to get started!</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="by_clicking_create_account_you_agree_to_our_terms_and_privacy_policy">By clicking “Create Account” you agree to our  \n terms and privacy policy.</string>
    <string name="don_t_have_an_account">Don’t have an account?</string>
    <string name="create_account">Create account.</string>
    <string name="if_you_are_not_a_member_yet_please_click_on_create_account">If you are not a member yet , please click on create account!</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="menu">Menu</string>
    <string name="favoris">Favories</string>
    <string name="basket">Basket</string>
    <string name="size">SIZE</string>
    <string name="xl">XL</string>
    <string name="l">L</string>
    <string name="m">M</string>
    <string name="s">S</string>
    <string name="xs">XS</string>
    <string name="buy_now">Buy Now</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="my_profile">My Profile</string>
    <string name="add_new_article">Add new Article</string>
    <string name="save_changes">Save Changes</string>
    <string name="i_sell">I Sell!</string>
    <string name="title">Title</string>
    <string name="description">description</string>
    <string name="price">Price</string>
    <string name="state">State</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="search_item">Search item...</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="man">Man</string>
    <string name="woman">Woman</string>
    <string name="clothes">Clothes</string>
    <string name="whishlist">Whishlist</string>
    <string name="your_wishlist_is_empty">YOUR WISHLIST IS EMPTY</string>
    <string name="your_shopping_bag_is_empty">YOUR SHOPPING BAG IS EMPTY</string>
    <string name="check_if_there_are_any_products_on_your_wishlist_and_snatch_them_up_before_they_re_gone">Check if there are any products on your wishlist and snatch them up before they’re gone!</string>
    <string name="you_can_also_check_out_the_latest_arrivals">You can also check out the latest arrivals</string>
    <string name="logout">LogOut</string>
    <string name="total">Total:</string>
    <string name="tax">Tax:</string>
    <string name="delivery_services">Delivery Services:</string>
    <string name="item_total">Item Total:</string>
    <string name="checkout">CHECKOUT</string>
    <!-- Strings used for fragments for navigation -->

</resources>